--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Musings</title>
+    <title>The Math Matrix</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <h1>Math Musings</h1>
+        <h1>The Math Matrix</h1>
         <p>Exploring the fascinating world of mathematics</p>
     </header>
     <nav>
