--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #153dc2;
             color: white;
             padding: 1rem 0;
             text-align: center;
@@ -48,7 +48,7 @@
 <body>
     <header>
         <h1>The Math Matrix</h1>
-        <p>Exploring the fascinating world of mathematics</p>
+        <p>INSERT</p>
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -86,7 +86,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Math Musings. All rights reserved.</p>
+        <p>&copy; 2024 Zach Abdulrahman. All rights reserved.</p>
     </footer>
 </body>
 </html>
