--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
     </style>
 </head>
 <body>
-    <header>The Commons</header>
+    <header>The Math Matrix</header>
     <div class="container">
         <div class="card">
-            <h3>Belonging in Inclusive Places</h3>
-            <p>2020 University at LambdaSchool</p>
+            <h3>Support Vector Machines</h3>
+            <p>Algos</p>
         </div>
         <div class="card">
-            <h3>Checklist & Things to do Before Your First Day at Lambda School</h3>
-            <p>Get ready for an exciting start!</p>
+            <h3>Tensors and Data analysis</h3>
+            <p>More ML</p>
         </div>
         <div class="card">
-            <h3>An Update on Lambda School in California</h3>
-            <p>Latest developments and plans.</p>
+            <h3>Comp Neuro</h3>
+            <p>what I am working on </p>
         </div>
     </div>
 </body>
