--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background: #f9f9f9;
         }
         header {
-            background-color: #f44336; /* Adjust the color to match your branding */
+            background-color: #f44336;
             color: white;
             padding: 20px;
             text-align: center;
@@ -30,18 +30,18 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             margin: 10px;
             padding: 20px;
-            flex-basis: 30%; /* Adjusts the size of the cards */
+            flex-basis: 30%;
             text-align: center;
-            transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for hover effects */
-            cursor: pointer; /* Changes the mouse cursor to a pointer */
+            transition: transform 0.3s, box-shadow 0.3s;
+            cursor: pointer;
         }
         .card:hover {
-            transform: translateY(-5px); /* Moves the card up slightly */
-            box-shadow: 0 8px 16px rgba(0,0,0,0.2); /* Enhances the shadow effect */
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
         }
         @media (max-width: 800px) {
             .card {
-                flex-basis: 100%; /* Stacks the cards on smaller screens */
+                flex-basis: 100%;
             }
         }
     </style>
@@ -49,30 +49,19 @@
 <body>
     <header>The Math Matrix</header>
     <div class="container">
-        <div class="card">
+    
+        <a href="SVM.html" class="card">
             <h3>Support Vector Machines</h3>
             <p>Algos</p>
-        </div>
-        <div class="card">
+        </a>
+        <a href="tensors-data-analysis.html" class="card">
             <h3>Tensors and Data analysis</h3>
             <p>More ML</p>
-        </div>
-        <div class="card">
+        </a>
+        <a href="computational-neuroscience.html" class="card">
             <h3>Comp Neuro</h3>
-            <p>what I am working on</p>
-        </div>
+            <p>What I am working on</p>
+        </a>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var cards = document.querySelectorAll('.card');
-            cards.forEach(function(card) {
-                card.addEventListener('click', function() {
-                    alert('Clicked on ' + card.querySelector('h3').innerText);
-                    // For more interactive response you might navigate to a different page or show more details
-                    // window.location.href = 'https://example.com/' + card.querySelector('h3').innerText;
-                });
-            });
-        });
-    </script>
 </body>
 </html>
