--- a/SVM.html
+++ b/SVM.html
@@ -6,7 +6,7 @@
     <title>Support Vector Machines</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Consolas, sans-serif;
             margin: 0;
             padding: 0;
             color: #333;
