--- a/SVM.html
+++ b/SVM.html
@@ -3,34 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support Vector Machines</title>
+    <title>Understanding Support Vector Machines</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
         body {
             font-family: Consolas, sans-serif;
-            margin: 0;
+            margin: 20px;
             padding: 0;
             color: #333;
             background: #f9f9f9;
         }
-        header {
-            background-color: #f44336;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-size: 24px;
+        h1, h2 {
+            color: #4CAF50;
         }
-        main {
-            padding: 20px;
-            text-align: center;
+        p {
+            margin: 20px 0;
         }
     </style>
 </head>
 <body>
-    <header>The Math Matrix - SVM</header>
-    <main>
-        <h1>Support Vector Machines</h1>
-        <p>Detailed exploration of SVM algorithms, their use cases, and implementation.</p>
-        <p>[Add more detailed content here]</p>
-    </main>
+    <h1>Understanding Support Vector Machines: A Deep Dive into SVMs</h1>
+
+    <p>Support Vector Machines (SVM) are a cornerstone of machine learning, providing a powerful tool for data classification. Despite their apparent complexity, the principles behind SVM can be understood with a solid grasp of the underlying mathematics. In this blog post, we'll explore the key concepts of SVM, including how they work and their application in solving real-world problems.</p>
+
+    <h2>What is a Support Vector Machine?</h2>
+    <p>A Support Vector Machine is a supervised machine learning algorithm primarily used for classification tasks. However, with appropriate modifications, it can also handle regression problems. At its core, SVM seeks to find the best separating hyperplane that divides data points from different classes in the feature space.</p>
+
+    <h2>The Mathematics of SVM</h2>
+    <p>To understand SVM, consider a dataset with two classes, where we aim to find a decision boundary (a hyperplane in higher dimensions) that best separates the classes. This boundary is chosen to maximize the margin between the closest points of the classes, which are known as support vectors.</p>
+
+    <h3>Linear SVM</h3>
+    <p>The equation for a hyperplane in an n-dimensional space is given by:</p>
+    <p>\[ \mathbf{w} \cdot \mathbf{x} - b = 0 \]</p>
+
+    <p>Where:</p>
+    <ul>
+        <li>\(\mathbf{w}\) is the weight vector perpendicular to the hyperplane.</li>
+        <li>\(\mathbf{x}\) is the feature vector.</li>
+        <li>\(b\) is the bias.</li>
+    </ul>
+
+    <p>The objective is to find \(\mathbf{w}\) and \(b\) such that the margin between the two classes is maximized while keeping the classes separated. This can be formulated as:</p>
+    <p>\[ \text{Minimize } \frac{1}{2} \| \mathbf{w} \|^2 \]</p>
+    <p>\[ \text{Subject to } y_i (\mathbf{w} \cdot \mathbf{x}_i - b) \geq 1, \text{ for all } i \]</p>
+
+    <p>Here, \(y_i\) represents the class label of each data point, which can be either +1 or -1.</p>
+
+    <h3>Kernel Trick</h3>
+    <p>For non-linearly separable data, SVM can be extended using the kernel trick. Instead of a linear function, SVM uses a kernel function to transform the data into a higher-dimensional space where a hyperplane can effectively separate the classes.</p>
+
+    <p>Commonly used kernel functions include:</p>
+    <ul>
+        <li>Polynomial: \( (x \cdot x')^d \)</li>
+        <li>Radial Basis Function (RBF): \( \exp(-\gamma \|x - x'\|^2) \)</li>
+        <li>Sigmoid: \( \tanh(\alpha x \cdot x' + c) \)</li>
+    </ul>
+
+    <h2>SVM in Practice</h2>
+    <p>In practical applications, SVMs are used for a variety of tasks such as:</p>
+    <ul>
+        <li>Image classification</li>
+        <li>Speech recognition</li>
+        <li>Text categorization</li>
+    </ul>
+
+    <p>The effectiveness of SVM in these domains often comes from its ability to handle high-dimensional data and its robustness against overfitting, especially in cases where the number of dimensions exceeds the number of samples.</p>
+
+    <h2>Conclusion</h2>
+    <p>Support Vector Machines represent a robust method for classification, capable of handling both linear and complex non-linear relationships in data. By strategically using the kernel trick, SVMs can extend their reach to more complex scenarios, making them a versatile tool in the machine learning arsenal.</p>
+
+    <p>For anyone looking to dive deeper into machine learning, gaining a thorough understanding of SVM and its applications can provide a strong foundation for both theory and practical implementation in various domains.</p>
 </body>
 </html>
