--- a/computational-neuroscience.html
+++ b/computational-neuroscience.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computational Neuroscience</title>
+    <title>Understanding the Generalized Leaky Integrate-and-Fire (GLIF) Model</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
             color: #333;
-            background: #f9f9f9;
         }
-        header {
-            background-color: #f44336;
-            color: white;
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
-            text-align: center;
-            font-size: 24px;
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        main {
-            padding: 20px;
-            text-align: center;
+        h1, h2, h3 {
+            color: #0073e6;
         }
     </style>
-
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
     <div class="container">
