--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background: #f9f9f9;
         }
         header {
-            background-color: #f44336;
+            background-color: #eebf27;
             color: white;
             padding: 20px;
             text-align: center;
