--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             margin: 10px;
             padding: 20px;
-            flex-basis: 30%;
+            flex-basis: 45%;
             text-align: center;
             transition: transform 0.3s, box-shadow 0.3s;
             cursor: pointer;
@@ -52,15 +52,15 @@
     
         <a href="SVM.html" class="card">
             <h3>Support Vector Machines</h3>
-            <p>Algos</p>
+            <p>ML Algorithm</p>
         </a>
         <a href="tensors-data-analysis.html" class="card">
             <h3>Tensors and Data analysis</h3>
-            <p>More ML</p>
+            <p>The Nth Dimension</p>
         </a>
         <a href="computational-neuroscience.html" class="card">
-            <h3>Comp Neuro</h3>
-            <p>What I am working on</p>
+            <h3>Computational Neuroscience</h3>
+            <p>Current Works</p>
         </a>
     </div>
 </body>
