--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             flex-wrap: wrap;
         }
         .card {
-            background: white;
+            background: rgb(124, 214, 136);
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             margin: 10px;
             padding: 20px;
@@ -63,5 +63,7 @@
             <p>Current Works</p>
         </a>
     </div>
+    <footer>
+        <p>&copy; 2024 The Math Matrix | Zach Abdulrahman</p>
 </body>
 </html>
