--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         .card:hover {
             transform: translateY(-5px);
             box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+            color: black;
+        }
+        .card h3, .card p {
+            margin: 0;
+        }
+        .card i {
+            font-size: 50px;
+            margin-bottom: 10px;
+            color: #4CAF50;
         }
         @media (max-width: 800px) {
             .card {
