--- a/computational-neuroscience.html
+++ b/computational-neuroscience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computational Neuroscience with the Generalized Leaky Integrate-and-Fire (GLIF) Model</title>
+    <title>Computational Neuroscience: Generalized Leaky Integrate-and-Fire (GLIF) Model</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>Computational Neuroscience with the Generalized Leaky Integrate-and-Fire (GLIF) Model</h1>
+    <h1>Computational Neuroscience: Generalized Leaky Integrate-and-Fire (GLIF) Model</h1>
 
     <p>The Generalized Leaky Integrate-and-Fire (GLIF) model is a fundamental tool in computational neuroscience, used to simulate the electrical activity of neurons. The GLIF model simplifies the complex dynamics of neuronal membranes, allowing researchers to study the behavior of large neuronal networks efficiently.</p>
 
