--- a/index.html
+++ b/index.html
@@ -30,21 +30,22 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             margin: 10px;
             padding: 20px;
-            flex-basis: 45%;
+            flex-basis: 60%;
             text-align: center;
             transition: transform 0.3s, box-shadow 0.3s;
             cursor: pointer;
+            text-decoration: none;
+            color: black; /* Ensure links are always black */
         }
         .card:hover {
             transform: translateY(-5px);
             box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-            color: black;
         }
         .card h3, .card p {
             margin: 0;
         }
         .card i {
-            font-size: 50px;
+            font-size: 70px;
             margin-bottom: 10px;
             color: #4CAF50;
         }
@@ -58,7 +59,6 @@
 <body>
     <header>The Math Matrix</header>
     <div class="container">
-    
         <a href="SVM.html" class="card">
             <h3>Support Vector Machines</h3>
             <p>ML Algorithm</p>
@@ -71,7 +71,10 @@
             <h3>Computational Neuroscience</h3>
             <p>Current Works</p>
         </a>
+        <a href="OM.html" class="card">
+            <h3>Nonlinear Optimization</h3>
+            <p>New Interest</p>
+        </a>
     </div>
 </body>
-
 </html>
