--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             padding: 0;
             color: #333;
             background: #f9f9f9;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         header {
             background-color: #eebf27;
@@ -24,6 +27,7 @@
             justify-content: space-around;
             padding: 20px;
             flex-wrap: wrap;
+            flex: 1;
         }
         .card {
             background: rgb(226, 211, 141);
@@ -36,6 +40,9 @@
             cursor: pointer;
             text-decoration: none;
             color: black; /* Ensure links are always black */
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Center text vertically */
         }
         .card:hover {
             transform: translateY(-5px);
@@ -49,6 +56,44 @@
             margin-bottom: 10px;
             color: #4CAF50;
         }
+        .excerpt {
+            font-family: Consolas, sans-serif;
+            color: #333;
+            text-align: center;
+            margin-top: 20px;
+            font-size: 25px;
+            padding: 0 20px;
+        }
+        .arrowed-list-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .arrowed-list {
+            font-family: Consolas, sans-serif;
+            font-size: 25px;
+            list-style-type: none;
+            padding: 0;
+            display: inline-block;
+            text-align: left;
+        }
+        .arrowed-list li {
+            position: relative;
+            padding-left: 20px;
+            margin-bottom: 10px;
+        }
+        .arrowed-list li:before {
+            content: "→";
+            position: absolute;
+            left: 0;
+            color: #333;
+        }
+        footer {
+            background-color: #eebf27;
+            color: white;
+            padding: 15px;
+            text-align: center;
+            font-size: 18px;
+        }
         @media (max-width: 800px) {
             .card {
                 flex-basis: 100%;
@@ -57,14 +102,16 @@
     </style>
 </head>
 <body>
-    <header>The Math Matrix</header>
+    <header>
+        The Math Matrix
+    </header>
     <div class="container">
         <a href="SVM.html" class="card">
             <h3>Support Vector Machines</h3>
             <p>ML Algorithm</p>
         </a>
         <a href="tensors-data-analysis.html" class="card">
-            <h3>Tensors and Data analysis</h3>
+            <h3>Tensors and Data Analysis</h3>
             <p>The Nth Dimension</p>
         </a>
         <a href="computational-neuroscience.html" class="card">
@@ -76,5 +123,21 @@
             <p>New Interest</p>
         </a>
     </div>
+    <div class="excerpt">
+        Blog exploring the complexities of math with clear explanations and engaging discussions coupled with topics I like!
+        <p>Research areas:</p>
+    </div>
+    <div class="arrowed-list-container">
+        <ul class="arrowed-list">
+            <li>Applied Mathematics</li>
+            <li>Dynamic Systems</li>
+            <li>Machine Learning</li>
+            <li>Partial Differential Equations</li>
+            <li>Numerical Methods</li>
+        </ul>
+    </div>
+    <footer>
+        &copy; 2024 The Math Matrix | Zach Abdulrahman
+    </footer>
 </body>
 </html>
