--- a/SVM.html
+++ b/SVM.html
@@ -74,5 +74,12 @@
     <p>Support Vector Machines represent a robust method for classification, capable of handling both linear and complex non-linear relationships in data. By strategically using the kernel trick, SVMs can extend their reach to more complex scenarios, making them a versatile tool in the machine learning arsenal.</p>
 
     <p>For anyone looking to dive deeper into machine learning, gaining a thorough understanding of SVM and its applications can provide a strong foundation for both theory and practical implementation in various domains.</p>
+
+    <h2>Further Reading and Resources</h2>
+    <p>For those interested in delving deeper into the theory and applications of SVMs, here are some recommended papers and resources:</p>
+    <ul>
+        <li><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1155/2021/5594899">Support Vector Machine Applications in Financial Distress Prediction: A Review</a></li>
+        <li><a href="https://link.springer.com/content/pdf/10.1007/978-1-4302-5990-9_3.pdf">SVMs for Classification</a></li>
+    </ul>
 </body>
 </html>
