--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p>ML Algorithm</p>
         </a>
         <a href="tensors-data-analysis.html" class="card">
-            <h3>Tensors and Data Analysis</h3>
+            <h3>Tensors in Data Analysis</h3>
             <p>The Nth Dimension</p>
         </a>
         <a href="computational-neuroscience.html" class="card">
