--- a/tensors-data-analysis.html
+++ b/tensors-data-analysis.html
@@ -61,5 +61,12 @@
 
     <h2>Conclusion</h2>
     <p>Tensors are a versatile and powerful tool in data analysis. They extend the capabilities of matrices to higher dimensions, enabling complex data representation and manipulation. Understanding tensors and their operations is crucial for advancing in modern data science and machine learning fields.</p>
+    <h2>Further Reading and Resources</h2>
+    <p>Here are some recommended papers and resources:</p>
+    <ul>
+        <li><a href="https://dl.acm.org/doi/pdf/10.1145/2915921">ACM's Tensors for Data Mining and Fusion</a></li>
+        <li><a href="https://www.tandfonline.com/doi/pdf/10.1080/01621459.2013.776499?casa_token=B6mLVpxZWxwAAAAA:2AQGUt7GHQ2bKiuh1pbKFjKYDK6aEvaNdva0-gEMFbObRBWmTosNLj2seRdzKwLKtm1eXZb3OkpCyw">Tensor Regression: Neuroimaging Application</a></li>
+        <li><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8408516&casa_token=6cscud7BJhMAAAAA:d4OvgYR6JajFwGQ0XT419qjVQ2oydmDAh_4m2dWjhLdBUSS2ag8QqNNuVtsBhFkqMwj8BzuHwqo&tag=1">Tensor Based Classification Models</a></li>
+    </ul>
 </body>
 </html>
