resource links added

--- a/OM.html
+++ b/OM.html
@@ -75,5 +75,12 @@
 
     <h2>Conclusion</h2>
     <p>Nonlinear optimization is a versatile and powerful tool in mathematics, enabling the solution of complex problems across various domains. Understanding the principles and methods of nonlinear optimization is essential for tackling real-world challenges and achieving optimal solutions.</p>
+    <h2>Further Reading and Resources</h2>
+    <p>Some Nonlinearity for your linear life:</p>
+    <ul>
+        <li><a href="https://epubs.siam.org/doi/pdf/10.1137/S0036144502414942?casa_token=08uTg-VyMacAAAAA:T3vtUbov8fPtqJrmytsuHT36kFc075i5LFyv7zsbzm2jfGlph07XBi5b9D6wL2pEmgYzW4yFogU">Interior Methods</a></li>
+        <li><a href="https://link.springer.com/content/pdf/10.1007/s10479-007-0172-6.pdf">Complexity and algorithms for nonlinear optimization problems</a></li>
+        <li><a href="https://www.cambridge.org/core/journals/acta-numerica/article/abs/mixedinteger-nonlinear-optimization/2D0CE8CDA53363A31ADE8689565517BD">Mixed Integer nonlinear optimization</a></li>
+    </ul>
 </body>
 </html>
