--- a/computational-neuroscience.html
+++ b/computational-neuroscience.html
@@ -69,5 +69,12 @@
 
     <h2>Conclusion</h2>
     <p>The Generalized Leaky Integrate-and-Fire (GLIF) model is a powerful tool for modeling neuronal dynamics. Its simplicity and computational efficiency make it ideal for simulating large networks of neurons and exploring complex brain functions. By leveraging the GLIF model, researchers can gain insights into the fundamental mechanisms of neural computation and sensory processing.</p>
+    <h2>Further Reading and Resources</h2>
+    <p>My Motivation and Current Workings:</p>
+    <ul>
+        <li><a href="https://www.pnas.org/doi/full/10.1073/pnas.0804303105">Event Tree Analysis: Neuronal Network Dyanmics</a></li>
+        <li><a href="https://pubmed.ncbi.nlm.nih.gov/21597895/">Corse Grained ETA Hodgkin-Huxley Dynamics</a></li>
+        <li><a href="https://www.nature.com/articles/s41467-017-02717-4.pdf">Generalized Leaky Integrate-and-Fire Models (GLIF)</a></li>
+    </ul>
 </body>
 </html>
